--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "redux-persist": "^6.0.0",
+    "uuid": "^9.0.1",
     "web3": "^4.4.0"
   },
   "devDependencies": {
