--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.11.2",
+    "@cloudinary/url-gen": "^1.16.0",
     "@metamask/detect-provider": "^2.0.0",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.5",
+    "cloudinary": "^1.41.3",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
     "redux-persist": "^6.0.0",
     "uuid": "^9.0.1",
-    "web3": "^4.4.0"
+    "web3": "^4.4.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
