--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@metamask/detect-provider": "^2.0.0",
     "@mui/icons-material": "^5.15.6",
@@ -28,7 +29,9 @@
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.21.2",
+    "react-slick": "^0.30.0",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "uuid": "^9.0.1",
     "web3": "^4.4.0",
     "yup": "^1.3.3"
@@ -36,6 +39,7 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-slick": "^0.23.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
